New configuration variable in Start: PYMOL_RECONNECT_TRIES. Now PyMolAdaptor uses that one instead of hard-coded. Set default to 1. Now catching NumberFormatException in applyUserProperties. If a value was incorrectly specified in config file then we print message and exit.